# FuseLink

./: .gitmodules  CMakeLists.txt  development.md
src/: channel.cc  channel.h  checks.h  debug.h  fuselink.cc  net.cc  net.h  sendrecv.cu  sendrecv.cuh  task.h
src/device/: device.cu  device.h
src/nic_load/: nic_load.c  nic_load.h
test/: CMakeLists.txt  rdma_client_roce.cc  rdma_server_roce.cc  test_channel.cu  test_channel_connection.cc  test_sendrecv.cu  test_sendrecv_general.cu
